--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     </style>
   </head>
   <body>
+    <p style="background-color:LightGray";>
+    <p style="color:#0645AD";>
     <!-- You can put your HTML here -->
-    Hello!
+   Hello! My name is Eva.</p>
   </body>
 </html>
