--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>HTML Skeleton</title>
+    <title>eisherwall</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <style>
@@ -13,7 +13,7 @@
     </style>
   </head>
   <body>
-    <p style="background-color:LightGray";>
+    <body style="background-color:#D8BFD8";>
     <p style="color:#0645AD";>
     <!-- You can put your HTML here -->
    Hello! My name is Eva.</p>
