--- a/index.html
+++ b/index.html
@@ -2,20 +2,86 @@
 
 <html>
   <head>
-    <title>eisherwall</title>
+    <title>Profile</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, user-scalable=no" />
     <style>
-      /* You can put any CSS styles here */
+      body {
+        font-size: 16px;
+        line-height: 1.5;
+        text-align: center;
+        margin: 0;
+      }
+      main {
+        padding: 150px;
+      }
       img {
         max-width: 100%;
+        width: 100px;
+      }
+      footer {
+        font-size: 10px;
+        margin: 5em auto;
+      }
+      img.profile {
+        height: 307px;
+        width: 233px;
+      }
+      img.item {
+        height: 100px;
+        width: auto;
       }
     </style>
   </head>
   <body>
-    <body style="background-color:#D8BFD8";>
-    <p style="color:#0645AD";>
-    <!-- You can put your HTML here -->
-   Hello! My name is Eva.</p>
+    <!-- This page has been inspired by https://tosic.com -->
+    <main>
+      <img
+        src="images/eiw_headshot.jpeg"
+        class="profile"
+        alt="headshot of eisherwall"
+      />
+
+      <br /><br /><br />
+
+      <b>Favorite Fruit</b><br />
+      🍌
+
+      <br /><br />
+
+      <b>Four Things in My Bag</b><br />
+      <img
+        src="images/poems.jpg"
+        class="item"
+        alt="The Collected Poems of Laura Riding"
+      />
+      <img
+        src="images/longsword.jpg"
+        class="item"
+        alt="a steel fencing longsword"
+      />
+      <img src="images/mujipen.jpg" class="item" alt="muji ballpoint pen" />
+      
+        <img
+        src="images/knitting.jpg"
+        class="item"
+        alt="yarn and knitting needles"
+      />
+      </a>
+
+      <br /><br />
+
+      <b>My Personal “Prof. Dr. Style” of 2024</b><br />
+
+      1 — ekphrasis<br />
+      2 — web as image and text<br />
+      3 — research outside of academia 
+
+      <br /><br />
+
+      <b>My Web Experiments</b><br />
+      <a href="https://banweblearning.net/demo1/index.html">One</a><br />
+      <a href="https://banweblearning.net/demo2/index.html">Two</a><br />
+      <a href="https://banweblearning.net/demo3/index.html">Three</a>
+    </main>
   </body>
 </html>
